tests/codegen/errors/codegen/diagnostics/atom.codegen.stateful.layout.dot.missing.field.diagnostic/stateful-layout-dot-missing-field-diagnostic.mon
;; TEST-ID: tests.codegen.stateful.layout.dot.missing.field.diagnostic
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 50-data-layout
;; TEST-SUBSET: diagnostics
;; TEST-QUALITY: branch-state-regression
;; TEST-CODEGEN-ATOM: atom.codegen.stateful.layout.dot.missing.field.diagnostic
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.runtime-codegen-corpus, monadc.context.language.codegen-atom-web
;; TEST-PURPOSE: Missing layout field should diagnose in dot branch.
;; TEST-ATOM: atom.codegen.stateful.layout.dot.missing.field.diagnostic
;; TEST-EXPECT: fail:compile
;; TEST-CODEGEN-PATH: codegen.layout
;; TEST-CODEGEN-PATH: codegen.adt
;; TEST-CODEGEN-PATH: codegen.dot
;; TEST-COVERAGE: codegen.c:826-933 type_to_llvm TYPE_LAYOUT/TYPE_APP branches
;; TEST-COVERAGE: codegen.c:1239-1310 codegen_show_value layout/ADT display branches
;; TEST-COVERAGE: codegen.c:12669 keyword constructor field initialization
;; TEST-COVERAGE: codegen.c:12902-12952 dot special form
;; TEST-USES-ATOM: atom.codegen.category.50.data.layout
;; TEST-USES-ATOM: atom.codegen.category.05.symbol.env
;; TEST-USES-ATOM: atom.codegen.subset.50.data.layout.diagnostics
;; TEST-MENU: errors/codegen/diagnostics/atom.codegen.stateful.layout.dot.missing.field.diagnostic
;; TEST-MENU-PATH: codegen/errors/codegen/diagnostics/atom.codegen.stateful.layout.dot.missing.field.diagnostic
;; TEST-ATOM-LEAF: atom.codegen.stateful.layout.dot.missing.field.diagnostic
;; TEST-CLI-TARGET: codegen errors codegen diagnostics

(module Main)
(layout Point [x :: Int])
(define p (Point 1))
(show p.y)
